--- a/LaTex/glosario.tex
+++ b/LaTex/glosario.tex
@@ -5,8 +5,18 @@
 \addcontentsline{toc}{chapter}{Glosario} % Añade el glosario a la tabla de contenidos
 
 \begin{description} 
-  \item[$\mathcal{H}$] Conjunto de hipótesis de un modelo.
-
+  \item[$\mathbb{R}$] Conjunto de números reales.
+  \item[$\mathbb{N}$] Conjunto de números naturales.
+  \item[i.d.d.] Independientes e idénticamente distribuidas.
+  \item[${\mathbb{E}[X]}$] Esperanza de la variable aleatoria $X$.
+  \item[${P[X, Y]}$] Probabilidad conjunta de las variables aleatorias $X$ e $Y$.
+  \item[SVD] Descomposición en valores singulares.
+  \item[$X^{\dagger}$] Pseudoinversa de la matriz $X$.
+  \item[Descenso de gradiente] Método de optimización utilizado para minimizar una función de pérdida.
+  \item[$\mathcal{H}$] Conjunto de hipótesis de un modelo formado por las hipótesis candidatas y la función objetivo.
   \item[$\mathcal{D}$] Conjunto de datos de entrenamiento.
+  \item[$E_{out}$] Error fuera de la muestra o error de generalización. 
+  \item[$E_{in}$] Error dentro de la muestra o error de entrenamiento.
+  \item[Complejidad efectiva del modelo] Máximo número de ejemplos de entrenamiento en el que el modelo obtiene un $E_{in}$ próximo a cero.
 \end{description}
 \endinput
