--- a/LaTex/library.bib
+++ b/LaTex/library.bib
@@ -135,7 +135,6 @@
   biburl = {https://www.bibsonomy.org/bibtex/270baa8090e176cea7e3b9c3210fd18f0/ng9q1nfk},
   doi = {https://doi.org/10.1007/978-3-031-45468-4},
   edition = 1,
-  editor = {Cham, Springer},
   interhash = {7c6c84136d9d592af1f904257d185fec},
   intrahash = {70baa8090e176cea7e3b9c3210fd18f0},
   isbn = {978-3-031-45468-4},
@@ -195,6 +194,19 @@
   volume = 86,
   year = 1998
 }
+
+@article{Mallat2016,
+   title={Understanding deep convolutional networks},
+   volume={374},
+   ISSN={1471-2962},
+   url={http://dx.doi.org/10.1098/rsta.2015.0203},
+   DOI={10.1098/rsta.2015.0203},
+   number={2065},
+   journal={Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+   publisher={The Royal Society},
+   author={Mallat, Stéphane},
+   year={2016},
+   month=apr, pages={20150203} }
 
 @book{Prince2023,
   added-at = {2023-11-14T15:20:58.000+0100},
@@ -333,6 +345,21 @@
       url={https://arxiv.org/abs/1811.06965}, 
 }
 
+
+@InProceedings{Balestriero2018,
+  title = 	 {A Spline Theory of Deep Learning},
+  author =       {Balestriero, Randall and richard baraniuk},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
+  pages = 	 {374--383},
+  year = 	 {2018},
+  editor = 	 {Dy, Jennifer and Krause, Andreas},
+  volume = 	 {80},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {10--15 Jul},
+  publisher =    {PMLR},
+  url = 	 {https://proceedings.mlr.press/v80/balestriero18b.html},
+}
+
 @misc{Nakkiran2019,
       title={Deep Double Descent: Where Bigger Models and More Data Hurt}, 
       author={Preetum Nakkiran and Gal Kaplun and Yamini Bansal and Tristan Yang and Boaz Barak and Ilya Sutskever},
@@ -341,6 +368,63 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/1912.02292}, 
+}
+
+@misc{Thompson2022,
+      title={The Computational Limits of Deep Learning}, 
+      author={Neil C. Thompson and Kristjan Greenewald and Keeheon Lee and Gabriel F. Manso},
+      year={2022},
+      eprint={2007.05558},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2007.05558}, 
+}
+
+@misc{Cottier2025,
+      title={The rising costs of training frontier AI models}, 
+      author={Ben Cottier and Robi Rahman and Loredana Fattorini and Nestor Maslej and Tamay Besiroglu and David Owen},
+      year={2025},
+      eprint={2405.21015},
+      archivePrefix={arXiv},
+      primaryClass={cs.CY},
+      url={https://arxiv.org/abs/2405.21015}, 
+}
+
+@inproceedings{Krogh1991,
+  author = {Krogh, Anders and Hertz, John A.},
+  title = {A simple weight decay can improve generalization},
+  year = {1991},
+  isbn = {1558602224},
+  publisher = {Morgan Kaufmann Publishers Inc.},
+  address = {San Francisco, CA, USA},
+  booktitle = {Proceedings of the 5th International Conference on Neural Information Processing Systems},
+  pages = {950-957},
+  numpages = {8},
+  location = {Denver, Colorado},
+  series = {NIPS'91}
+}
+
+@article{Vallet1989,
+doi = {10.1209/0295-5075/9/4/003},
+url = {https://dx.doi.org/10.1209/0295-5075/9/4/003},
+year = {1989},
+month = {jun},
+publisher = {},
+volume = {9},
+number = {4},
+pages = {315},
+author = {F. Vallet and J.-G. Cailton and Ph Refregier},
+title = {Linear and Nonlinear Extension of the Pseudo-Inverse Solution for Learning Boolean Functions},
+journal = {Europhysics Letters},
+abstract = {We consider in this letter the pseudo-inverse solution for the learning of a binary classification. We address the problem of overfitting, i.e. the fact that the generalization rate can be relatively low although the learning rate is very high. We interpret this phenomenon with respect to the behaviour of the small eigenvalues of the covariance matrix of the learned patterns. We propose two ways for solving this problem: the first one is linear, the second one is a two-layer perceptron. Numerical simulations are given to illustrate these approaches.}
+}
+
+@inproceedings{Michael2018,
+title={On the Information Bottleneck Theory of Deep Learning},
+author={Andrew Michael Saxe and Yamini Bansal and Joel Dapello and Madhu Advani and Artemy Kolchinsky and Brendan Daniel Tracey and David Daniel Cox},
+booktitle={International Conference on Learning Representations},
+year={2018},
+url={https://openreview.net/forum?id=ry_WPG-A-},
 }
 
 @misc{Neal2019,
@@ -353,6 +437,67 @@
       url={https://arxiv.org/abs/1810.08591}, 
 }
 
+@book{Kamath2019,
+  author = {Kamath, Uday and Liu, John and Whitaker, James},
+  year = {2019},
+  month = {01},
+  pages = {},
+  title = {Deep Learning for NLP and Speech Recognition},
+  isbn = {978-3-030-14595-8},
+  doi = {10.1007/978-3-030-14596-5}
+}
+
+@article{Lauriola2022,
+  author = {Lauriola, Ivano and Lavelli, Alberto and Aiolli, Fabio},
+  title = {An introduction to Deep Learning in Natural Language Processing: Models, techniques, and tools},
+  year = {2022},
+  issue_date = {Jan 2022},
+  publisher = {Elsevier Science Publishers B. V.},
+  address = {NLD},
+  volume = {470},
+  number = {C},
+  issn = {0925-2312},
+  url = {https://doi.org/10.1016/j.neucom.2021.05.103},
+  doi = {10.1016/j.neucom.2021.05.103},
+  journal = {Neurocomput.},
+  month = jan,
+  pages = {443-456},
+  numpages = {14},
+  keywords = {99-00, 00-01, Software, Language Models, Transformer, Natural Language Processing, Deep Learning}
+}
+
+@inbook{Berner2022,
+   title={The Modern Mathematics of Deep Learning},
+   ISBN={9781316516782},
+   url={http://dx.doi.org/10.1017/9781009025096.002},
+   DOI={10.1017/9781009025096.002},
+   booktitle={Mathematical Aspects of Deep Learning},
+   publisher={Cambridge University Press},
+   author={Berner, Julius and Grohs, Philipp and Kutyniok, Gitta and Petersen, Philipp},
+   year={2022},
+   month=dec, pages={1-111} 
+}
+
+@article{Elasri2022,
+  title={Image Generation: A Review},
+  author={Mohamed Elasri and Omar Elharrouss and Somaya Ali Al-Maadeed and Hamid Tairi},
+  journal={Neural Processing Letters},
+  year={2022},
+  volume={54},
+  pages={4609-4646},
+  url={https://api.semanticscholar.org/CorpusID:247416070}
+}
+
+@misc{Ruthotto2021,
+      title={An Introduction to Deep Generative Modeling}, 
+      author={Lars Ruthotto and Eldad Haber},
+      year={2021},
+      eprint={2103.05180},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2103.05180}, 
+}
+
 @misc{Szegedy2014,
       title={Going Deeper with Convolutions}, 
       author={Christian Szegedy and Wei Liu and Yangqing Jia and Pierre Sermanet and Scott Reed and Dragomir Anguelov and Dumitru Erhan and Vincent Vanhoucke and Andrew Rabinovich},
@@ -361,6 +506,16 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/1409.4842}, 
+}
+
+@misc{Gissin2019,
+      title={The Implicit Bias of Depth: How Incremental Learning Drives Generalization}, 
+      author={Daniel Gissin and Shai Shalev-Shwartz and Amit Daniely},
+      year={2019},
+      eprint={1909.12051},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1909.12051}, 
 }
 
 
@@ -372,6 +527,49 @@
       archivePrefix={arXiv},
       primaryClass={stat.ML},
       url={https://arxiv.org/abs/1710.10345}, 
+}
+
+@article{Krizhevsky2009,
+    title= {CIFAR-10 and CIFAR-100 (Canadian Institute for Advanced Research)},
+    journal= {},
+    author= {Alex Krizhevsky and Vinod Nair and Geoffrey Hinton},
+    year= {},
+    url= {http://www.cs.toronto.edu/~kriz/cifar.html},
+    keywords= {Dataset},
+}
+
+@incollection{NEURIPS2019_9015,
+title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+@misc{He2015,
+      title={Deep Residual Learning for Image Recognition}, 
+      author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+      year={2015},
+      eprint={1512.03385},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1512.03385}, 
+}
+
+@misc{Nilsback2008,
+  author    = {M. A. Nilsback and A. Zisserman},
+  title     = {A Visual Vocabulary for Flower Classification},
+  year      = {2008},
+  howpublished = {Available at \url{http://www.robots.ox.ac.uk/~vgg/data/flowers/102/}},
+}
+
+@inproceedings{LeCun2005TheMD,
+  title={The mnist database of handwritten digits},
+  author={Yann LeCun and Corinna Cortes},
+  year={2005},
+  url={https://api.semanticscholar.org/CorpusID:60282629}
 }
 
 @book{Hastie2001,
@@ -474,6 +672,19 @@
   numpages = {9}
 }
 
+@article{Blumer1987,
+  added-at = {2019-04-05T12:36:59.000+0200},
+  author = {BLUMER, Anselm and EHRENFEUCHT, Andrzej and HAUSSLER, David and WARMUTH, Manfred K.},
+  description = {J9.pdf},
+  interhash = {8a6a7fbc7dbed1410efeb31f6fe518a2},
+  intrahash = {3db8db5bf317781a562ea3a626bf6edf},
+  keywords = {machine-learning theory},
+  timestamp = {2019-04-05T12:36:59.000+0200},
+  title = {OCCAM'S RAZOR},
+  url = {https://users.soe.ucsc.edu/~manfred/pubs/J9.pdf},
+  year = 1987
+}
+
 @misc{Schaeffer2023,
   title={Double Descent Demystified: Identifying, Interpreting \& Ablating the Sources of a Deep Learning Puzzle},
   author={Rylan Schaeffer and Mikail Khona and Zachary Robertson and Akhilan Boopathy and Kateryna Pistunova and Jason W. Rocks and Ila Rani Fiete and Oluwasanmi Koyejo},
@@ -532,6 +743,16 @@
       archivePrefix={arXiv},
       primaryClass={stat.ML},
       url={https://arxiv.org/abs/2203.07337}, 
+}
+
+@misc{Belkin2021,
+      title={Fit without fear: remarkable mathematical phenomena of deep learning through the prism of interpolation}, 
+      author={Mikhail Belkin},
+      year={2021},
+      eprint={2105.14368},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2105.14368}, 
 }
 
 @misc{Ming2020,
@@ -619,6 +840,16 @@
   url = {https://link.aps.org/doi/10.1103/PhysRevE.100.012115}
 }
 
+@misc{Liu2021,
+      title={Loss landscapes and optimization in over-parameterized non-linear systems and neural networks}, 
+      author={Chaoyue Liu and Libin Zhu and Mikhail Belkin},
+      year={2021},
+      eprint={2003.00307},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2003.00307}, 
+}
+
 @inproceedings{WidrowHoff1960,
   author    = {Bernard Widrow and Ted Hoff},
   title     = {Adaptive Switching Circuits},
@@ -626,6 +857,26 @@
   year      = {1960},
   pages     = {96--104},
   publisher = {Institute of Radio Engineers}
+}
+
+@misc{Ravi2024,
+      title={The Implicit Bias of Gradient Descent on Separable Multiclass Data}, 
+      author={Hrithik Ravi and Clayton Scott and Daniel Soudry and Yutong Wang},
+      year={2024},
+      eprint={2411.01350},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2411.01350}, 
+}
+
+@misc{Gunasekar2019,
+      title={Implicit Bias of Gradient Descent on Linear Convolutional Networks}, 
+      author={Suriya Gunasekar and Jason Lee and Daniel Soudry and Nathan Srebro},
+      year={2019},
+      eprint={1806.00468},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1806.00468}, 
 }
 
 @inproceedings{Vapnik1991,
@@ -697,6 +948,61 @@ series = {NIPS'91}
   year={2020},
   volume={abs/2012.10931},
   url={https://api.semanticscholar.org/CorpusID:229340623}
+}
+
+@book{Pressman1994,
+  added-at = {2010-10-13T11:23:56.000+0200},
+  author = {Pressman, Roger S.},
+  biburl = {https://www.bibsonomy.org/bibtex/24a374b65d62e247c56699d350cb3a9e6/wiljami74},
+  edition = {European},
+  interhash = {a73382af2bea9739026e38fda3a0682f},
+  intrahash = {4a374b65d62e247c56699d350cb3a9e6},
+  keywords = {software_engineering},
+  note = {Adapted by Darrel Ince},
+  publisher = {McGraw-Hill},
+  timestamp = {2010-10-13T11:23:56.000+0200},
+  title = {Software Engineering: A Practitioner's Approach},
+  year = 1994
+}
+
+@misc{Li2024,
+  author       = {Fei-Fei Li and Justin Johnson and Serena Yeung},
+  title        = {CS231n: Deep Learning for Computer Vision},
+  year         = {2024},
+  howpublished = {Stanford University, Course Website},
+  note         = {Lecture 4, Slide 45, \url{http://cs231n.stanford.edu/}}
+}
+
+@inproceedings{Neves2018,
+author = {Neves, Cláudia and Gonzalez, Ignacio and Leander, John and Karoumi, Raid},
+year = {2018},
+month = {01},
+pages = {73-84},
+title = {A New Approach to Damage Detection in Bridges Using Machine Learning},
+isbn = {978-3-319-67442-1},
+journal = {Lecture Notes in Civil Engineering},
+doi = {10.1007/978-3-319-67443-8_5}
+}
+
+@misc{Charles2018,
+      title={Implicit Self-Regularization in Deep Neural Networks: Evidence from Random Matrix Theory and Implications for Learning}, 
+      author={Charles H. Martin and Michael W. Mahoney},
+      year={2018},
+      eprint={1810.01075},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1810.01075}, 
+}
+
+@article{Marchenko1967,
+  author    = {V. A. Marchenko and L. A. Pastur},
+  title     = {Distribution of eigenvalues for some sets of random matrices},
+  journal   = {Mathematics of the USSR-Sbornik},
+  volume    = {1},
+  number    = {4},
+  pages     = {457--483},
+  year      = {1967},
+  doi       = {10.1070/SM1967v001n04ABEH000314}
 }
 
 # Tesis
