--- a/LaTex/tfg.tex
+++ b/LaTex/tfg.tex
@@ -40,7 +40,12 @@
 \let\cleardoublepage\clearpage
 
 \usepackage{subcaption}
-
+\usepackage{multirow}
+\usepackage{colortbl} 
+\usepackage{xcolor}   
+\usepackage{nicematrix}
+\usepackage{graphicx}
+\usepackage{eurosym}
 
 \begin{document}
 
@@ -93,7 +98,9 @@
 \appendix % Reinicia la numeración de los capítulos y usa letras para numerarlos
 \pdfbookmark[-1]{Apéndices}{appendix} % Alternativamente podemos agrupar los apéndices con un nuevo \part{Apéndices}
 
-% \input{apendices/apendice-ejemplo}
+\input{apendices/apendice01}
+\input{apendices/apendice02}
+\input{apendices/apendice03}
 % Añadir tantos apéndices como sea necesario 
 
 % -------------------------------------------------------------------
